<resources>
    <string name="app_name">AndroidOnlineQuizApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_username">Enter Username</string>
    <string name="signup_button_text">No account? Create one now!</string>
    <string name="change_pwd">Change password</string>
    <string name="promptSignIn">Sign In</string>
    <string name="signOutPrompt">Sign Out</string>
    <string name="playWithoutAccountPrompt">Play Without Account</string>
    <string name="playAgainPrompt">Play Again</string>
    <string name="deleteAccountPrompt">Delete Account</string>
    <string name="create_account">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="user_exists">User Already Exists!</string>
    <string name="user_regSuccess">User registration success!</string>
    <string name="enter_username">Please enter a Username</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="user_not_exists">User does not exist</string>
    <string name="wrong_password_login">Wrong Password</string>
    <string name="enter_username_login">Please enter a Username</string>
    <string name="user_not_exists_login">User does not exist</string>
    <string name="categories">Categories</string>
    <string name="ranking">Ranking</string>
    <string name="settings">Settings</string>
    <string name="play">PLAY</string>
    <string name="please_log_in">Please log in to use this view</string>
    <string name="welcome_text">Welcome </string>
    <string name="score_text">You have a score of: </string>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
</resources>
