<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_category"
        android:enabled="true"
        android:title="@string/categories"
        android:icon="@drawable/ic_question_answer_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_ranking"
        android:enabled="true"
        android:title="@string/ranking"
        android:icon="@drawable/ic_star_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="ifRoom"/>

</menu>